# ytcapture

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ytcapture/: __init__.py  __main__.py  cli.py  completion.py  config.py  dedup.py  frames.py  local.py  markdown.py  metadata.py  titling.py  transcript.py  utils.py  video.py
src/ytcapture/data/: vidcapture.bash  ytcapture.bash
tests/: __init__.py  test_clipboard.py  test_titling.py
